Fix Flicker Safari

--- a/src/app/wedding-invitation/wedding-invitation.component.scss
+++ b/src/app/wedding-invitation/wedding-invitation.component.scss
@@ -65,7 +65,7 @@
   background-image: url("../Images/plicfata.PNG");
   background-repeat: no-repeat;
   position: absolute;
-  z-index: 10;
+  z-index: 12;
   cursor: url("../Images/heart.png"), auto;
   cursor: url("../Images/heart.cur"), auto;
   display: -webkit-box;
@@ -486,4 +486,8 @@ mat-icon {
 
 .hide {
   visibility: hidden;
+}
+
+.send-to-back {
+  transform: translateZ(-1px);
 }
